examples/usecase1/klee-out-1/test000001.kquery
array next_func[4] : w32 -> w8 = symbolic
array next_func_1[4] : w32 -> w8 = symbolic
array next_func_2[4] : w32 -> w8 = symbolic
array next_func_3[4] : w32 -> w8 = symbolic
(query [(Sle 0
              N0:(ReadLSB w32 0 next_func))
         (Sle N0 3)
         (Eq false (Eq 1 N0))
         (Eq 1
             (ReadLSB w32 0 next_func_1))
         (Eq 1
             (ReadLSB w32 0 next_func_2))
         (Sle 0
              N1:(ReadLSB w32 0 next_func_3))
         (Sle N1 3)
         (Eq false (Eq 1 N1))]
        false)
